modernize code for 2017